[package]
name = "arrow_deps"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2018"
description = "Apache Arrow / Parquet / DataFusion dependencies for InfluxDB IOx, to ensure consistent versions and unified updates"

[dependencies] # In alphabetical order
# We are using development version of arrow/parquet/datafusion and the dependencies are at the same rev

# The version can be found here: https://github.com/apache/arrow/commit/d4c5c3c02e52e76579d95a84ae33491b9c1284c9
#
arrow = { git = "https://github.com/apache/arrow.git", rev = "d4c5c3c02e52e76579d95a84ae33491b9c1284c9" , default-features = false }
arrow-flight = { git = "https://github.com/apache/arrow.git", rev = "d4c5c3c02e52e76579d95a84ae33491b9c1284c9" }

# Turn off optional datafusion features (function packages)
datafusion = { git = "https://github.com/apache/arrow.git", rev = "d4c5c3c02e52e76579d95a84ae33491b9c1284c9", default-features = false }

# Turn off the "arrow" feature; it currently has a bug that causes the crate to rebuild every time
# and we're not currently using it anyway
parquet = { git = "https://github.com/apache/arrow.git", rev = "d4c5c3c02e52e76579d95a84ae33491b9c1284c9", default-features = false, features = ["snap", "brotli", "flate2", "lz4", "zstd"] }
