[package]
name = "arrow_flight"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2018"
description = "Re-exports arrow-flight at a specific version"

[dependencies]

# Rename to workaround doctest bug
upstream = { git = "https://github.com/apache/arrow-rs", rev = "508f25c10032857da34ea88cc8166f0741616a32", package = "arrow-flight" }
