[package]
name = "arrow_flight"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2018"
description = "Re-exports arrow-flight at a specific version"

[dependencies]

# Rename to workaround doctest bug
upstream = { git = "https://github.com/apache/arrow-rs", rev = "8226219fe7104f6c8a2740806f96f02c960d991c", package = "arrow-flight" }
