[package]
name = "arrow_util"
description = "Apache Arrow utilities"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["runtime-rng"] }
# need dyn_cmp_dict feature for comparing dictionary arrays
arrow = { workspace = true, features = ["prettyprint", "dyn_cmp_dict"] }
# used by arrow anyway (needed for printing workaround)
chrono = { version = "0.4", default-features = false }
comfy-table = { version = "6.1", default-features = false }
hashbrown = { workspace = true }
num-traits = "0.2"
snafu = "0.7"
workspace-hack = { path = "../workspace-hack"}

[dev-dependencies]
arrow-flight = { workspace = true }
datafusion = { workspace = true }
rand = "0.8.3"
