[package]
name = "authz"
description = "Interface to authorization checking services"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = {version = "0.2.9", optional = true }
generated_types = { path = "../generated_types" }
observability_deps = { path = "../observability_deps" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# crates.io dependencies in alphabetical order.
async-trait = "0.1"
snafu = "0.7"
tonic = { workspace = true }

[features]
http = ["dep:http"]
