[package]
name = "authz"
description = "Interface to authorization checking services"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = { path = "../backoff" }
http = {version = "0.2.9", optional = true }
iox_time = { version = "0.1.0", path = "../iox_time" }
generated_types = { path = "../generated_types" }
metric = { version = "0.1.0", path = "../metric" }
observability_deps = { path = "../observability_deps" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# crates.io dependencies in alphabetical order.
async-trait = "0.1"
base64 = "0.21.4"
snafu = "0.7"
tonic = { workspace = true }

[dev-dependencies]
assert_matches = "1.5.0"
parking_lot = "0.12.1"
paste = "1.0.14"
test_helpers_end_to_end = { path = "../test_helpers_end_to_end" }
tokio = "1.32.0"

[features]
http = ["dep:http"]
