[package]
name = "backoff"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.32", features = ["macros", "time"] }
observability_deps = { path = "../observability_deps" }
rand = "0.8"
snafu = "0.7"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
