[package]
name = "cache_system"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
futures = "0.3"
iox_time = { path = "../iox_time" }
metric = { path = "../metric" }
observability_deps = { path = "../observability_deps" }
parking_lot = { version = "0.12", features = ["arc_lock"] }
pdatastructs = { version = "0.7", default-features = false, features = ["fixedbitset"] }
tokio = { version = "1.20", features = ["macros", "parking_lot", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.3" }
trace = { path = "../trace"}
workspace-hack = { path = "../workspace-hack"}

[dev-dependencies]
criterion = "0.3"
proptest = { version = "1", default_features = false, features = ["std"] }
rand = "0.8.3"

[lib]
# Allow --save-baseline to work
# https://github.com/bheisler/criterion.rs/issues/275
bench = false

[[bench]]
name = "addressable_heap"
harness = false
