[package]
name = "cache_system"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.64"
backoff = { path = "../backoff" }
futures = "0.3"
iox_time = { path = "../iox_time" }
metric = { path = "../metric" }
observability_deps = { path = "../observability_deps" }
parking_lot = { version = "0.12", features = ["arc_lock"] }
pdatastructs = { version = "0.7", default-features = false, features = ["fixedbitset"] }
rand = "0.8.3"
tokio = { version = "1.25", features = ["macros", "parking_lot", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.4" }
trace = { path = "../trace"}
workspace-hack = { path = "../workspace-hack"}

[dev-dependencies]
criterion = { version = "0.4", default-features = false, features = ["rayon"]}
proptest = { version = "1", default_features = false, features = ["std"] }

[lib]
# Allow --save-baseline to work
# https://github.com/bheisler/criterion.rs/issues/275
bench = false

[[bench]]
name = "addressable_heap"
harness = false
