[package]
name = "catalog_cache"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bytes = "1.5"
dashmap = "5.5"
futures = "0.3"
hyper = "0.14"
url = "2.5"
reqwest = { version = "0.11", default-features = false }
snafu = "0.8"
tokio = { version = "1.35", default-features = false, features = ["macros", "rt"] }
tokio-util = "0.7"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
