[package]
name = "client_util"
description = "Shared code for IOx clients"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
http = "0.2.9"
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls"] }
thiserror = "1.0.39"
tonic = { version = "0.8", features = ["tls", "tls-webpki-roots"] }
tower = "0.4"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tokio = { version = "1.27", features = ["macros", "parking_lot", "rt-multi-thread"] }
mockito = "1.0"
