[package]
name = "client_util"
description = "Shared code for IOx clients"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
http = "1.0.0"
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls-native-roots"] }
thiserror = "1.0.56"
tonic = { workspace = true }
tower = "0.4"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tokio = { version = "1.35", features = ["macros", "parking_lot", "rt-multi-thread"] }
mockito = { version = "1.2", default-features = false }
