[package]
name = "cluster"
version = "0.1.0"
authors = ["pauldix <paul@pauldix.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
data_types = { path = "../data_types" }
generated_types = { path = "../generated_types" }
influxdb_line_protocol = { path = "../influxdb_line_protocol" }
storage = { path = "../storage" }
write_buffer = { path = "../write_buffer" }
object_store = { path = "../object_store" }
tokio = { version = "0.2", features = ["full"] }
arrow_deps = { path = "../arrow_deps" }
futures = "0.3.7"
bytes = "0.5"
