[package]
name = "compactor2_test_utils"
description = "Utilities for writing tests for compactor2"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.64"
backoff = { path = "../backoff" }
bytes = "1.4"
compactor2 = { path = "../compactor2" }
datafusion = { workspace = true }
data_types = { path = "../data_types" }
futures = "0.3"
iox_catalog = { path = "../iox_catalog" }
iox_query = { path = "../iox_query" }
iox_time = { path = "../iox_time" }
metric = { path = "../metric" }
object_store = "0.5.4"
observability_deps = { path = "../observability_deps" }
parquet_file = { path = "../parquet_file" }
predicate = { path = "../predicate" }
rand = "0.8.3"
schema = { path = "../schema" }
sharder = { path = "../sharder" }
snafu = "0.7"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tokio-util = { version = "0.7.5" }
tracker = { path = "../tracker" }
uuid = { version = "1", features = ["v4"] }
workspace-hack = { path = "../workspace-hack"}

arrow_util = { path = "../arrow_util" }
iox_tests = { path = "../iox_tests" }
test_helpers = { path = "../test_helpers"}
insta = { version = "1.28.0", features = ["yaml"] }
