[package]
name = "compactor2_test_utils"
description = "Utilities for writing tests for compactor2"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.68"
backoff = { path = "../backoff" }
compactor2 = { path = "../compactor2" }
datafusion = { workspace = true }
datafusion_util = { path = "../datafusion_util" }
data_types = { path = "../data_types" }
futures = "0.3"
iox_catalog = { path = "../iox_catalog" }
iox_query = { path = "../iox_query" }
iox_time = { path = "../iox_time" }
object_store = "0.5.6"
observability_deps = { path = "../observability_deps" }
parquet_file = { path = "../parquet_file" }
schema = { path = "../schema" }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tracker = { path = "../tracker" }
uuid = { version = "1", features = ["v4"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

iox_tests = { path = "../iox_tests" }
insta = { version = "1.29.0", features = ["yaml"] }
