[package]
name = "config"
description = "InfluxDB IOx configuration management"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6"
dotenv = "0.15.0"
dirs = "3.0.1"


[dev-dependencies]
test_helpers = { path = "../test_helpers" }
