[package]
name = "data_types"
description = "Shared data types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false }
croaring = "0.8.1"
influxdb-line-protocol = { path = "../influxdb_line_protocol" }
iox_time = { path = "../iox_time" }
generated_types = { path = "../generated_types" }
observability_deps = { path = "../observability_deps" }
once_cell = "1"
ordered-float = "3"
schema = { path = "../schema" }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
thiserror = "1.0.40"
uuid = { version = "1", features = ["v4"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
percent-encoding = "2.2.0"

[dev-dependencies] # In alphabetical order
assert_matches = "1"
paste = "1.0.12"
proptest = { version = "1.2.0", default-features = false }
test_helpers = { path = "../test_helpers" }
