[package]
name = "data_types"
description = "Shared data types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arrow-buffer = { workspace = true }
bytes = "1.5"
chrono = { version = "0.4", default-features = false }
croaring = "1.0.0"
influxdb-line-protocol = { path = "../influxdb_line_protocol" }
iox_time = { path = "../iox_time" }
generated_types = { path = "../generated_types" }
murmur3 = "0.5.2"
observability_deps = { path = "../observability_deps" }
once_cell = "1"
ordered-float = "4"
percent-encoding = "2.3.1"
prost = { workspace = true }
schema = { path = "../schema" }
serde_json = "1.0"
siphasher = "1.0"
sha2 = { version = "0.10", default-features = false }
snafu = "0.8"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
thiserror = "1.0.56"
uuid = { version = "1", features = ["v4"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies] # In alphabetical order
assert_matches = "1"
paste = "1.0.14"
proptest = { version = "1.4.0", default-features = false }
test_helpers = { path = "../test_helpers" }
hex = "0.4.2"
