[package]
name = "datafusion"
description = "Re-exports datafusion at a specific version"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

# Rename to workaround doctest bug
# Turn off optional datafusion features (e.g. don't get support for crypto functions or avro)
upstream = { git = "https://github.com/apache/arrow-datafusion.git", rev="57e445aadcc87cad33de8a969eb4203b219ec9dd", default-features = false, package = "datafusion" }
datafusion-proto = { git = "https://github.com/apache/arrow-datafusion.git", rev="57e445aadcc87cad33de8a969eb4203b219ec9dd" }
workspace-hack = { path = "../workspace-hack"}
