[package]
name = "datafusion"
description = "Re-exports datafusion at a specific version"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

# Rename to workaround doctest bug
# Turn off optional datafusion features (e.g. don't get support for crypto functions or avro)
upstream = { git = "https://github.com/apache/arrow-datafusion.git", rev="48f73c6af3b0cc747c38b4a9c7a610f4630e8736", default-features = false, package = "datafusion" }
datafusion-proto = { git = "https://github.com/apache/arrow-datafusion.git", rev="48f73c6af3b0cc747c38b4a9c7a610f4630e8736" }
workspace-hack = { path = "../workspace-hack"}
