[package]
name = "datafusion_util"
description = "Datafusion utilities"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
datafusion = { workspace = true }
futures = "0.3"
object_store = { workspace = true }
observability_deps = { path = "../observability_deps" }
pin-project = "1.1"
schema = { path = "../schema" }
tokio = { version = "1.35", features = ["parking_lot", "sync"] }
tokio-stream = "0.1"
url = "2.5"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
