[package]
name = "db"
version = "0.1.0"
authors = ["pauldix <paul@pauldix.net>"]
edition = "2021"

[dependencies] # In alphabetical order
arrow = { version = "7.0", features = ["prettyprint"] }
async-trait = "0.1"
data_types = { path = "../data_types" }
datafusion = { path = "../datafusion" }
datafusion_util = { path = "../datafusion_util" }
dml = { path = "../dml" }
futures = "0.3"
hashbrown = "0.11"
internal_types = { path = "../internal_types" }
iox_object_store = { path = "../iox_object_store" }
itertools = "0.10.1"
job_registry = { path = "../job_registry" }
lifecycle = { path = "../lifecycle" }
metric = { path = "../metric" }
mutable_batch = { path = "../mutable_batch" }
mutable_batch_lp = { path = "../mutable_batch_lp" }
mutable_buffer = { path = "../mutable_buffer" }
object_store = { path = "../object_store" }
observability_deps = { path = "../observability_deps" }
once_cell = { version = "1.4.0", features = ["parking_lot"] }
parking_lot = "0.11.2"
parquet_catalog = { path = "../parquet_catalog" }
parquet_file = { path = "../parquet_file" }
persistence_windows = { path = "../persistence_windows" }
predicate = { path = "../predicate" }
query = { path = "../query" }
rand = "0.8.3"
rand_distr = "0.4.2"
read_buffer = { path = "../read_buffer" }
schema = { path = "../schema" }
snafu = "0.7"
time = { path = "../time" }
tokio = { version = "1.13", features = ["macros", "parking_lot", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.6.9" }
trace = { path = "../trace" }
tracker = { path = "../tracker" }
uuid = { version = "0.8", features = ["v4"] }
write_buffer = { path = "../write_buffer" }
workspace-hack = { path = "../workspace-hack"}

[dev-dependencies] # In alphabetical order
arrow_util = { path = "../arrow_util" }
bytes = "1.0"
test_helpers = { path = "../test_helpers" }

[features]
